--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -46,7 +46,7 @@
                         <input type="text" id="destinationAmount" class="form-control mb-4" placeholder="Хочу приобрести" name="destinationAmount" disabled>
                     </div>
                 </div>
-                <div class="btn-toolbar justify-content-center">
+                <div class="btn-toolbar justify-content-center ml-4">
                     <input type="hidden" id="_csrf" name="_csrf" th:value="${_csrf.token}"/>
                     <div class="btn-group mr-2">
                         <button class="btn btn-info btn-block btn-black my-4" type="button" id="convert">Конвертировать</button>
@@ -54,6 +54,9 @@
                     <div class="btn-group mr-2">
                         <button class="btn btn-info btn-block btn-black my-4" type="submit" id="history" name="history">История операций</button>
                     </div>
+                </div>
+                <div class="row justify-content-center">
+                    <a href="/logout">Выйти</a>
                 </div>
             </form>
             <!-- Default form login -->
